package transport.protobuf;

message Endpoint {
  required bytes ip = 1;
  required int32 port = 2;
}

message WrapperMessage {
  required int32 msg_type = 1;
  required bytes payload = 2;
}

message ManagedEndpointMessage {
  optional Endpoint endpoint = 1;
  optional bool result = 2;
  optional int32 message_id = 3;
  optional bytes identifier = 4;
  optional int32 frequency = 5;
  optional int32 retry_count = 6;
  optional int32 retry_frequency = 7;
}

message NatDetectionRequest {
  repeated bytes candidate_ips = 1;
  required int32 candidate_port = 2;
}

message NatDetectionResponse {
  optional Endpoint endpoint = 1;
  required int32 nat_type = 2;
}

message ProxyConnectRequest {
  required Endpoint endpoint = 1;
  required bool rendezvous_connect = 2;
}

message ProxyConnectResponse {
  required bool result = 1;
}

message ForwardRendezvousRequest {
  required Endpoint receiver_endpoint = 1;
}

message ForwardRendezvousResponse {
  required Endpoint receiver_rendezvous_endpoint = 1;
}

message RendezvousRequest {
  required Endpoint originator_endpoint = 1;
}
message RendezvousResponse {
  required Endpoint originator_endpoint = 1;
}